@@ -20,6 +20,7 @@ version <next>:
 - maskedmin and maskedmax filters
 - VDPAU VP9 hwaccel
 - median filter
+- HVQM4 demuxer and decoder
 
 
 version 4.2:
